--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   <h3>Education</h3>
 
   <ul>
-    <li>Bcahelors of Software Engineering - COMSATS University (2019)</li>
+    <li>Bachelors of Software Engineering - COMSATS University (2019)</li>
   </ul>
 <br><br>
   <hr>
