--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
       <td><h1>Hadeeq Akhzar</h1>
       <p><em>Software Engineer</em></p>
-      <p>I am Software Engineer from Lahore, Pakistan. Recently immigrated to Canada. I have done my bachelors in Software Engineering from <a href="https://lahore.comsats.edu.pk/default.aspx">COMSATS University</a>, Pakistan. I like playing video games, sports and exercise. </p>
+      <p>I am Software Engineer from Lahore, Pakistan. Recently immigrated to Canada. I have done my Bachelors in Software Engineering from <a href="https://lahore.comsats.edu.pk/default.aspx">COMSATS University</a>, Pakistan. I like playing video games, sports and exercise. </p>
       </td>
   </tr>
 </table>
@@ -26,7 +26,7 @@
   <h3>Education</h3>
 
   <ul>
-    <li>Bachelors Of Software Engineering - COMSATS University (2019)</li>
+    <li>Bachelors of Software Engineering - COMSATS University (2019)</li>
   </ul>
 <br><br>
   <hr>
@@ -56,6 +56,10 @@
     <td>Web Developer/Digital Marketer at Institute Of Career Development, Pakistan</td>
   </tr>
 
+  <tr>
+    <td>June 2021 - Current</td>
+    <td>Walmart Meat Associate, Mississauga</td>
+  </tr>
 
 </tbody>
 </table>
