--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Hadeeq's HTML siteaaa</title>
+  <title>Hadeeq's HTML site</title>
 </head>
 
 <body>
@@ -57,10 +57,16 @@
   </tr>
 
   <tr>
-    <td>June 2021 - Current</td>
+    <td>June 2021 - January 2022</td>
     <td>Walmart Meat Associate, Mississauga</td>
   </tr>
 
+  <tr>
+    <td>FebRuary 2021 - Current</td>
+    <td>Walmart Meats Department Manager, Mississauga</td>
+  </tr>
+
+  
 </tbody>
 </table>
 <br><br>
