--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
       <td><h1>Hadeeq Akhzar</h1>
       <p><em>Software Engineer</em></p>
-      <p>I am Software Engineer from Lahore, Pakistan. Recently immigrated to Canada. I have done my Bachelors in Software Engineering from <a href="https://lahore.comsats.edu.pk/default.aspx">COMSATS University</a>, Pakistan. I like playing video games, sports and exercise. </p>
+      <p>I am Software Engineer. I have done my Bachelors in Software Engineering from <a href="https://www.lancaster.ac.uk/">Lancaster University</a>, UK. I like to play video games, tennis and exercise. </p>
       </td>
   </tr>
 </table>
@@ -127,9 +127,9 @@
 <hr>
   <h3>Hobbies</h3>
   <ol>
-    <li>Sports</li>
+    <li>Tennis</li>
     <li>Play Video Games</li>
-    <li>Watching Movies and Dramas</li>
+    <li>Watch Movies, TV shows & Anime</li>
   </ol>
 <hr>
 
