--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
       <td><h1>Hadeeq Akhzar</h1>
       <p><em>Software Engineer</em></p>
-      <p>I am Software Engineer. I have done my Bachelors in Software Engineering from <a href="https://www.lancaster.ac.uk/">Lancaster University</a>, UK. I like to play video games, tennis and exercise. </p>
+      <p>I have done my Bachelors in Software Engineering from <a href="https://www.lancaster.ac.uk/">Lancaster University</a>, UK. . I like to play video games, tennis and exercise. </p>
       </td>
   </tr>
 </table>
@@ -26,7 +26,7 @@
   <h3>Education</h3>
 
   <ul>
-    <li>Bachelors of Software Engineering - COMSATS University (2019)</li>
+    <li>Bachelor of Science in Software Engineering - Lancaster University (2019)</li>
   </ul>
 <br><br>
   <hr>
