--- a/index.html
+++ b/index.html
@@ -53,12 +53,12 @@
 <tbody>
   <tr>
     <td>Oct 2019 - Oct 2020</td>
-    <td>Web Developer/Digital Marketer at Institute Of Career Development, Pakistan</td>
+    <td>Web Developer/Digital Marketer, Institute Of Career Development Pakistan</td>
   </tr>
 
   <tr>
     <td>June 2021 - January 2022</td>
-    <td>Walmart Meat Associate, Mississauga</td>
+    <td>Walmart Meats Associate, Mississauga</td>
   </tr>
 
   <tr>
@@ -85,11 +85,11 @@
     <td>
       <table>
       <tr>
-        <td>HTML(5)</td>
+        <td>HTML</td>
         <td>⭐⭐⭐⭐⭐</td>
       </tr>
       <tr>
-        <td>CSS(3)</td>
+        <td>CSS</td>
         <td>⭐⭐⭐⭐⭐</td>
       </tr>
       <tr>
@@ -106,12 +106,12 @@
           <td>⭐⭐⭐⭐</td>
         </tr>
         <tr>
-          <td>SQL</td>
+          <td>JavaScript</td>
           <td>⭐⭐⭐⭐</td>
         </tr>
         <tr>
-          <td>Bootstrap</td>
-          <td>⭐⭐⭐⭐</td>
+          <td>SQL</td>
+          <td>⭐⭐⭐</td>
         </tr>
       </table>
     </td>
