--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
       <td><h1>Hadeeq Akhzar</h1>
       <p><em>Software Engineer</em></p>
-      <p>I studied Software Engineering and currently trying to improve myself. Love Anime ❤️. Play Tekken whenever possible. </p>
+      <p>I studied Software Engineering and currently trying to improve myself.</p>
       </td>
   </tr>
 </table>
