--- a/index.html
+++ b/index.html
@@ -58,12 +58,7 @@
 
   <tr>
     <td>June 2021 - January 2022</td>
-    <td>Walmart Meats Associate, Mississauga</td>
-  </tr>
-
-  <tr>
-    <td>February 2022 - Current</td>
-    <td>Walmart Meats Department Manager, Mississauga</td>
+    <td>Walmart Associate, Mississauga</td>
   </tr>
 
   
