--- a/contact.html
+++ b/contact.html
@@ -10,7 +10,7 @@
 <ul>
   <li>Email Address :      akhzar4572@yahoo.com</li><br>
   <li>Mobile Number : +1 (905) 805 8358</li><br>
-  <li>Linkedin      : <a href="https://www.linkedin.com/in/hadeeq-akhzar-54886a118/">Linkedin Profile</a> </li><br>
+  <li>Linkedin      : <a href="https://www.linkedin.com/in/hadeeq-akhzar/">Linkedin Profile</a> </li><br>
 </ul>
 <br>
 <form action="mailto:akhzar4572@yahoo.com" method="post" enctype="text/plain">
