--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Hadeeq's HTML site</title>
+  <title>Hadeeq Akhzar - Resume</title>
 </head>
 
 <body>
@@ -11,91 +11,90 @@
 <table cellspacing="20">
   <tr>
     <td> <img src="images/My Pic 1.png" alt="Hadeeq's Profile Picture"></td>
-
-      <td><h1>Hadeeq Akhzar</h1>
-      <p><em>Software Engineer</em></p>
-      <p>I studied Software Engineering and currently trying to improve myself.</p>
-      </td>
+    <td>
+      <h1>Hadeeq Akhzar</h1>
+      <p><em>Software Engineer | Cloud Computing Enthusiast</em></p>
+      <p>I am passionate about web development, cloud computing, containerization, and automation. Currently, I am improving my skills through advanced projects and academic coursework. With hands-on experience in AWS, Azure, Docker, Kubernetes, and more, I strive to build scalable solutions and enhance operational efficiencies.</p>
+    </td>
   </tr>
 </table>
 
-
-<br>
 <hr>
-<br><br>
-  <h3>Education</h3>
+<h3>Summary of Qualifications</h3>
+<ul>
+  <li>3+ years of experience in web development and IT support through academic projects and professional roles.</li>
+  <li>Proficient in Cloud Computing technologies including AWS, Azure, and GCP, with hands-on experience in cloud-based infrastructure.</li>
+  <li>Experienced in containerization and orchestration with Docker and Kubernetes, and solid understanding of DevOps practices.</li>
+  <li>Expertise in databases like MySQL and MongoDB, focusing on schema design, queries, and optimization.</li>
+  <li>Strong interpersonal and customer service skills, with 2+ years of experience managing customer interactions in a retail environment.</li>
+  <li>Lifelong learner continuously improving technical skills through online courses and certifications in cloud technologies and software development.</li>
+</ul>
 
-  <ul>
-    <li>Bachelor of Science in Software Engineering - <a href="https://www.lancaster.ac.uk/">Lancaster University</a>, UK (2019)</li>
-  </ul>
-<br><br>
-  <hr>
-  <br><br>
-  <h3>Relevant Coursework</h3>
-  <ul>
-    <li>Data Structures & Algorithms</li>
-    <li>Object Oriented Programming</li>
-    <li>Software Requirement Engineering</li>
-    <li>Web Development</li>
-    <li>Software Project Management</li>
-  </ul>
-  <br><br>
-  <hr>
+<hr>
+<h3>Education</h3>
+<ul>
+  <li><strong>Post-Graduate Certificate in Cloud Computing</strong> – Humber Polytechnic (May 2024 – Dec 2024)</li>
+  <li><strong>Bachelor of Science in Software Engineering</strong> – Lancaster University, UK (Sept 2014 – Feb 2019)</li>
+</ul>
 
+<hr>
+<h3>Relevant Coursework</h3>
+<ul>
+  <li>Application Programming (Python, Django)</li>
+  <li>Database Management (MySQL, NoSQL)</li>
+  <li>DevOps (Docker, Kubernetes, Helm, Grafana, Chaos Engineering)</li>
+  <li>Automation (Azure Cloud, Terraform, Ansible)</li>
+  <li>Cloud Solutions (AWS Services)</li>
+  <li>Project Management (Jira)</li>
+</ul>
+
+<hr>
 <h3>Work Experience</h3>
-<table  border="1">
-<thead>
-  <tr>
-    <th>Dates</th>
-    <th>Work</th>
-  </tr>
-</thead>
-<tbody>
-  <tr>
-    <td>Oct 2019 - Oct 2020</td>
-    <td>Web Developer/Digital Marketer, Institute Of Career Development Pakistan</td>
-  </tr>
-
-  <tr>
-    <td>June 2021 - January 2022</td>
-    <td>Walmart Associate, Mississauga</td>
-  </tr>
-
-  
-</tbody>
+<table border="1" cellspacing="10">
+  <thead>
+    <tr>
+      <th>Dates</th>
+      <th>Role</th>
+      <th>Company</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td>Oct 2019 - Oct 2020</td>
+      <td>Web Developer / Digital Marketer</td>
+      <td>Institute Of Career Development (ICD), Lahore, Pakistan</td>
+    </tr>
+    <tr>
+      <td>June 2021 - Present</td>
+      <td>Customer Service Associate</td>
+      <td>Walmart, Mississauga, ON</td>
+    </tr>
+  </tbody>
 </table>
-<br><br>
+
 <hr>
-
 <h3>Skills</h3>
-
-
-                                                                <!--        Table 1        -->
-
-<br>
-                                                               <!--          Table 2          -->
-
-<table  cellspacing="10" >
+<table cellspacing="10">
   <tr>
     <td>
       <table>
-      <tr>
-        <td>HTML</td>
-        <td>⭐⭐⭐⭐⭐</td>
-      </tr>
-      <tr>
-        <td>CSS</td>
-        <td>⭐⭐⭐⭐⭐</td>
-      </tr>
-      <tr>
-        <td>Java</td>
-        <td>⭐⭐⭐⭐</td>
-      </tr>
-    </table>
-  </td>
+        <tr>
+          <td>HTML</td>
+          <td>⭐⭐⭐⭐⭐</td>
+        </tr>
+        <tr>
+          <td>CSS</td>
+          <td>⭐⭐⭐⭐⭐</td>
+        </tr>
+        <tr>
+          <td>Java</td>
+          <td>⭐⭐⭐⭐</td>
+        </tr>
+      </table>
+    </td>
 
     <td>
-      <table >
+      <table>
         <tr>
           <td>WordPress</td>
           <td>⭐⭐⭐⭐</td>
@@ -110,22 +109,30 @@
         </tr>
       </table>
     </td>
-
-
-
   </tr>
 </table>
 
-<br>
-
-<br>
 <hr>
-  <h3>Hobbies</h3>
-  <ol>
-    <li>Tennis</li>
-    <li>Play Video Games</li>
-    <li>Watch Movies, TV shows & Anime</li>
-  </ol>
+<h3>Key Projects</h3>
+<ul>
+  <li><strong>React Admin Panel for User Management:</strong> Designed and implemented a React-based admin panel using AWS Cognito and MySQL, automating user authentication workflows and improving operational efficiency.</li>
+  <li><strong>AWS SNS Notification System:</strong> Built an email notification system using AWS SNS for real-time alerts based on battery health data, integrating it into a React application for seamless notifications.</li>
+</ul>
+
+<hr>
+<h3>Hobbies</h3>
+<ol>
+  <li>Tennis</li>
+  <li>Playing Video Games</li>
+  <li>Watching Movies, TV shows & Anime</li>
+</ol>
+
+<hr>
+<h3>Achievements</h3>
+<ul>
+  <li>Dean’s Honour Roll – Humber Polytechnic (Summer 2024 Term)</li>
+</ul>
+
 <hr>
 
 <h3><a href="contact.html">Contact Me</a></h2>
