--- a/index.html
+++ b/index.html
@@ -96,8 +96,8 @@
     <td>
       <table>
         <tr>
-          <td>WordPress</td>
-          <td>⭐⭐⭐⭐</td>
+          <td>Python</td>
+          <td>⭐⭐⭐</td>
         </tr>
         <tr>
           <td>JavaScript</td>
